# cppPractice

./: .gitignore  CMakeLists.txt  build_and_run.sh
include/: prime_number.h  sum_digits.h
problems/: CHALLENGES_OVERVIEW.md  NEW_CHALLENGE_TEMPLATE.md  Overview.md  TEMPLATE.md  prime_number.md  sum_digits.md
src/: prime_number.cpp  sum_digits.cpp
tests/: test_prime_number.cpp  test_sum_digits.cpp
